--- a/client/src/styles/component/Header.module.css
+++ b/client/src/styles/component/Header.module.css
@@ -9,3 +9,16 @@
   display: flex;
   justify-content: space-between;
 }
+
+.logo {
+  font-size: 12px;
+  color: var(--clr-primary-500);
+  font-weight: var(--fw-700);
+  font-family: var(--ff-primary);
+}
+
+.nav__left-icons-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
