--- a/client/src/styles/component/Header.module.css
+++ b/client/src/styles/component/Header.module.css
@@ -1,4 +1,7 @@
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
   background-color: rgb(18 18 23 / 0.3);
   backdrop-filter: blur(12px);
   padding: 0.75rem;
