--- a/client/src/styles/pages/home/Hero.module.css
+++ b/client/src/styles/pages/home/Hero.module.css
@@ -2,9 +2,28 @@
   padding: 6rem 0 2rem 0;
 }
 
+.title {
+  margin-bottom: 0.25rem;
+  padding-top: 1.25rem;
+  font-size: var(--fs-700);
+  line-height: 1.75rem;
+  font-weight: var(--fw-700);
+}
+
 .sub-title {
   color: rgba(209, 213, 219, 0.9);
   font-size: var(--fs-450);
   line-height: 28px;
   font-weight: var(--fw-500);
+}
+
+.sub-title a {
+  color: var(--clr-primary-400);
+  text-decoration-color: var(--clr-primary-500);
+  transition: all 0.15s ease;
+}
+
+.sub-title a:hover {
+  color: var(--clr-primary-200);
+  text-decoration-color: var(--clr-primary-300);
 }
