--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -33,6 +33,8 @@
   --clr-white: #ffff;
   --clr-body-bg: #121316;
   --clr-border: hsla(0, 0%, 100%, 0.1);
+
+  --transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 * {
@@ -93,4 +95,9 @@ svg,
 video {
   display: block;
   vertical-align: middle;
+}
+
+.card:is(:hover, :focus) .read-more-btn svg {
+  transition: var(--transition);
+  transform: translateX(0.125rem);
 }
