--- a/client/src/styles/component/ui/Chip.module.css
+++ b/client/src/styles/component/ui/Chip.module.css
@@ -25,12 +25,15 @@
   transition: var(--transition);
 }
 
-.chip.contained:hover {
+.chip.contained:hover,
+.chip.contained:focus {
   --bg-opacity: 1;
 }
 
 .chip.transparent.primary:hover,
-.chip.transparent.gray:hover {
+.chip.transparent.primary:focus,
+.chip.transparent.gray:hover,
+.chip.transparent.gray:focus {
   --bg-color: 0 0% 100%;
   --bg-opacity: 0.05;
 }
