--- a/client/src/styles/pages/home/FeaturedPostCard.module.css
+++ b/client/src/styles/pages/home/FeaturedPostCard.module.css
@@ -19,7 +19,8 @@ a:has(.feature-post-card) {
   overflow: hidden;
 }
 
-.feature-post-card:hover {
+.feature-post-card:hover,
+.feature-post-card:focus {
   --border-color: hsla(26, 90%, 40%, 0.4);
   --opacity: 1;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 2.5px 4px hsla(26, 78%, 53%, 0.2);
@@ -30,7 +31,6 @@ a:has(.feature-post-card) {
   display: flex;
   align-items: center;
   flex-direction: column;
-  /* background-color: rgba(149, 83, 29, 0.1); */
   border-color: hsla(220, 9%, 46%, 0.2);
   border-bottom: 1px solid var(--clr-border);
   height: 14rem;
@@ -50,9 +50,9 @@ a:has(.feature-post-card) {
   background-image: inherit;
   background-size: 1px 1px;
   background-repeat: repeat;
-  opacity: 0.1;
+  opacity: 0.4;
   filter: saturate(5);
-
+  mix-blend-mode: darken;
   z-index: 1;
 }
 .thumbnail-wrapper:after {
@@ -62,27 +62,33 @@ a:has(.feature-post-card) {
   left: 0;
   right: 0;
   bottom: 0;
-  background: hsla(0, 0%, 14%, 0.5);
+  background: hsla(0, 0%, 13%, 0.5);
   -webkit-filter: blur(5px);
   filter: blur(5px);
+  mix-blend-mode: darken;
   backdrop-filter: blur(5px);
   z-index: 2;
 }
 
 .thumbnail__inner-wrapper {
-  border-color: hsla(220, 9%, 46%, 0.3);
+  display: flex;
+  align-items: end;
+  height: 100%;
   width: min(28rem, 94%);
-  border-top-right-radius: 0.375rem;
-  border-top-left-radius: 0.375rem;
   overflow: hidden;
-  margin-top: 3rem;
+  z-index: 5;
 }
 
 .thumbnail {
   position: relative;
+  border-top: 1px solid hsl(220 9% 46% /0.3);
+  border-left: 1px solid hsl(220 9% 46% /0.3);
+  border-right: 1px solid hsl(220 9% 46% /0.3);
+  border-top-right-radius: 0.375rem;
+  border-top-left-radius: 0.375rem;
   width: 100%;
   filter: none;
-  z-index: 5;
+  z-index: 6;
 }
 
 .dot-bg {
