Add markup of "SearchForm"

--- a/client/src/styles/component/ui/Button.module.css
+++ b/client/src/styles/component/ui/Button.module.css
@@ -26,8 +26,8 @@
   transition: var(--transition);
 }
 
-.button:hover:not(.x-small, .primary),
-.button:focus:not(.x-small, .primary) {
+.button:hover:not(.no-hover),
+.button:focus:not(.no-hover) {
   background-color: hsla(0, 0%, 100%, 0.05);
 }
 
