--- a/client/src/styles/component/SearchForm.module.css
+++ b/client/src/styles/component/SearchForm.module.css
@@ -40,24 +40,32 @@
 }
 
 .search-icon {
-  color: rgb(209 213 219);
+  color: hsl(var(--clr-icon));
 }
 
 .search-button-wrapper {
   height: 38px;
   /* border: 1px solid red; */
+  background-color: var(--clr-border);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: var(--search-border-radius);
+  border-bottom-right-radius: var(--search-border-radius);
 }
 
 .tooltip {
   height: 100%;
 }
 
+.search-form .delete-icon {
+  color: var(--clr-white);
+  border: none;
+  box-shadow: none;
+  margin-right: 4px;
+  /* border: 1px solid red; */
+}
+
 .search-button {
   height: 100%;
   padding: 0 1rem;
-  background-color: var(--clr-border);
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: var(--search-border-radius);
-  border-bottom-right-radius: var(--search-border-radius);
 }
