--- a/client/src/styles/component/CheckBoxTag.module.css
+++ b/client/src/styles/component/CheckBoxTag.module.css
@@ -6,7 +6,7 @@
 
 .tag-checkbox {
   --tag-border-raduis: 8px;
-  --height: 32px;
+  --height: 28px;
   --border-color: var(--clr-border);
   --bg-color: var(--clr-neutral-border);
   --color: var(--clr-off-white);
@@ -20,8 +20,8 @@
   cursor: pointer;
   user-select: none;
   width: fit-content;
-  line-height: 2rem;
-  font-size: var(--fs-300);
+  /* line-height: 2rem; */
+  font-size: var(--fs-100);
   height: var(--height);
   border-radius: var(--tag-border-raduis);
   box-shadow: inset 0 0 0 0px #fff, inset 0 0 0 1px var(--border-color),
@@ -37,7 +37,7 @@
 .tag-checkbox:focus {
   --opacity: 0.2;
 }
-.tag-checkbox:checked {
+.tag-checkbox.selected {
   --outline: 2px auto var(--clr-primary-500);
   outline-offset: 3px;
 }
