--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -29,6 +29,10 @@
   --clr-primary-300: hsl(27, 96%, 61%);
   --clr-primary-400: hsl(27, 77%, 56%);
   --clr-primary-500: hsl(26, 90%, 40%);
+  --clr-neutral-primary-200: 32 98% 83%;
+  --clr-neutral-primary-300: 27 96% 61%;
+  --clr-neutral-primary-400: 27 77% 56%;
+  --clr-neutral-primary-500: 26 90% 40%;
 
   --clr-white: #ffff;
   --clr-off-white: #f1f1f1;
@@ -95,6 +99,10 @@ button {
   background-image: none;
   cursor: pointer;
   border: none;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
 
 audio,
