--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -29,19 +29,22 @@
   --clr-primary-300: hsl(27, 96%, 61%);
   --clr-primary-400: hsl(27, 77%, 56%);
   --clr-primary-500: hsl(26, 90%, 40%);
+
   --clr-neutral-primary-200: 32 98% 83%;
   --clr-neutral-primary-300: 27 96% 61%;
   --clr-neutral-primary-400: 27 77% 56%;
   --clr-neutral-primary-500: 26 90% 40%;
 
-  --clr-white: #ffff;
-  --clr-off-white: #f1f1f1;
-  --clr-neutral-off-white: 0 0% 95%;
-  --clr-body-bg: #121316;
-  --clr-border: hsla(0, 0%, 100%, 0.1);
-  --clr-neutral-border: 0 0% 100%;
-  --clr-icon: 216 12% 84%;
+  --clr-white: hsl(0 0% 100%);
+  --clr-off-white: hsl(0 0% 95%);
+  --clr-border: hsla(0 0% 100% / 0.1);
+  --clr-card-bg: hsla(240, 12%, 5%, 0.8);
+  --clr-body-bg: hsl(225 10% 8%);
 
+  --clr-neutral-border: 0 0% 100%;
+  --clr-neutral-off-white: 0 0% 95%;
+
+  /* ANIMATION */
   --transition: all 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
