--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -29,11 +29,13 @@
   --clr-primary-300: hsl(27, 96%, 61%);
   --clr-primary-400: hsl(27, 77%, 56%);
   --clr-primary-500: hsl(26, 90%, 40%);
+  --clr-primary-600: hsl(13, 81%, 15%);
 
   --clr-neutral-primary-200: 32 98% 83%;
   --clr-neutral-primary-300: 27 96% 61%;
   --clr-neutral-primary-400: 27 77% 56%;
   --clr-neutral-primary-500: 26 90% 40%;
+  --clr-neutral-primary-600: 13 81% 15%;
 
   --clr-white: hsl(0 0% 100%);
   --clr-off-white: hsl(0 0% 95%);
