--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -4,6 +4,8 @@
 :root {
   color-scheme: dark;
 
+  --user-font-scale: 1rem - 16px;
+
   --ff-primary: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -71,6 +73,11 @@ body {
   line-height: 1.333;
   font-weight: normal;
   background: #131317;
+  font-size: clamp(
+    1rem,
+    0.4626rem + 1.0309vw + var(--user-font-scale),
+    1.125rem
+  );
 }
 
 html,
