--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -27,6 +27,7 @@
   --fw-700: 700;
 
   /* COLORS */
+  --clr-primary-100: hsl(32, 19%, 88%);
   --clr-primary-200: hsl(32, 98%, 83%);
   --clr-primary-300: hsl(27, 96%, 61%);
   --clr-primary-400: hsl(27, 77%, 56%);
@@ -41,9 +42,12 @@
 
   --clr-white: hsl(0 0% 100%);
   --clr-off-white: hsl(0 0% 95%);
+  --clr-off-white: hsl(0 0% 95%);
   --clr-border: hsla(0 0% 100% / 0.1);
+  --clr-neutral-border: 0 0% 100%;
   --clr-card-bg: hsla(240, 12%, 5%, 0.8);
   --clr-body-bg: hsl(225 10% 8%);
+  --clr-neutral-body-bg: 225 10% 8%;
 
   --clr-neutral-border: 0 0% 100%;
   --clr-neutral-off-white: 0 0% 95%;
