--- a/client/src/styles/pages/dashboard/NewPost.module.css
+++ b/client/src/styles/pages/dashboard/NewPost.module.css
@@ -34,15 +34,20 @@
   padding: 17.5px;
 }
 
-/* =========================== INPUT FIELD=============== */
-.input-texfield-item-wrapper div:first-child {
+.input-texfield-item-wrapper div[class*="MuiInputBase-root"] input {
+  color: var(--color);
+}
+.input-texfield-item-wrapper div[class*="MuiInputBase-root"] fieldset {
   color: var(--color);
   border-color: var(--border-color);
 }
 
-/* ===========================END INPUT FIELD=============== */
+.input-texfield-item-wrapper div[class*="MuiInputBase-root"] input {
+  background: hsl(var(--clr-neutral-body-bg) / 0.2);
+}
 
-.input-item-wrapper label {
+.input-item-wrapper label,
+.input-texfield-item-wrapper label {
   color: hsl(var(--label-color) / 0.3);
 }
 
@@ -51,6 +56,7 @@
 
 .new-form__form .input-item-wrapper .select-category div:first-child {
   background: hsl(var(--clr-neutral-body-bg) / 0.2);
+  color: var(--color);
 }
 
 .new-form__form .input-item-wrapper .select-category fieldset {
@@ -72,10 +78,48 @@
   --color: hsl(var(--clr-neutral-border) / 0.2);
 }
 
-.new-form__form .input-item-wrapper .select-category:hover fieldset {
+.new-form__form .input-item-wrapper .select-category:hover fieldset,
+.new-form__form
+  .input-texfield-item-wrapper
+  div[class*="MuiInputBase-root-MuiOutlinedInput-root"]:hover
+  fieldset[class*="MuiOutlinedInput-notchedOutline"] {
   --border-color: hsl(var(--clr-neutral-border) / 0.2);
+}
+
+.new-form__form
+  .input-texfield-item-wrapper
+  div[class~="Mui-focused"]
+  fieldset {
+  border-color: var(--clr-primary-500);
+}
+
+.new-form__form
+  .input-texfield-item-wrapper
+  div:not([class~="Mui-focused"])[class~="MuiInputBase-root"]:hover
+  fieldset {
+  border-color: hsl(var(--clr-neutral-border) / 0.2);
 }
 
 .new-form__form .input-item-wrapper .select-category:hover svg {
   --color: hsl(var(--clr-neutral-border) / 0.2);
+}
+
+.new-form__form .cover-photo-wrapper {
+  background-color: hsl(var(--clr-neutral-body-bg) / 0.2);
+  border: 1px solid var(--border-color);
+  border-style: dashed;
+  height: 15rem;
+  width: 100%;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.new-form__form .cover-photo-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.form__checkbox-wrapper span:first-child:not([class~="Mui-checked"]) svg {
+  color: hsl(var(--clr-neutral-border) / 0.1);
 }
